--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "this repo contain the source code,both backend and frontend, of football-tournaments managment platform; built with python-django, react-redux-hooks, postgresql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development --watch ./frontend/src/index.js --output-path ./frontend/static",
+    "build": "webpack --mode production ./frontend/src/index.js --output-path ./frontend/static"
   },
   "repository": {
     "type": "git",
@@ -27,9 +28,11 @@
     "webpack-cli": "^4.7.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
